--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon server/index.js",
-    "seed": "npm server/seed.js"
+    "seed": "node server/seed.js"
   },
   "keywords": [],
   "author": "",
